Try to fix ci