@@ -3,6 +3,7 @@ ThisBuild / startYear := Some(2022)
 ThisBuild / tlCiReleaseTags := false
 ThisBuild / tlCiReleaseBranches := Seq.empty
 ThisBuild / tlFatalWarningsInCi := false
+ThisBuild / githubWorkflowJavaVersions := List("8", "11").map(JavaSpec.temurin(_))
 
 lazy val root = project.in(file(".")).aggregate(hpack).enablePlugins(NoPublishPlugin)
 
@@ -11,17 +12,10 @@ lazy val hpack = project
   .settings(
     name := "hpack",
     libraryDependencies ++= Seq(
+      "junit" % "junit" % "4.13.2" % Test,
       "com.github.sbt" % "junit-interface" % "0.13.3" % Test,
       "org.mockito" % "mockito-core" % "1.9.5" % Test,
       "com.google.code.gson" % "gson" % "2.3.1" % Test,
     ),
     mimaPreviousArtifacts := Set.empty,
-    Test / fork := true,
-    Test / javaOptions += {
-      if (sys.props("java.version").startsWith("1.11."))
-        List(
-          "--add-opens=java.base/java.lang=ALL-UNNAMED"
-        ).mkString(" ")
-      else ""
-    },
   )
